--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.14.1",
     "fotmob": "^2.4.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
